交车确认流程修改

--- a/bc-business-workflow-jiaoche/src/main/resources/cn/bc/business/workflow/jiaoche/ExitOperationCars.form
+++ b/bc-business-workflow-jiaoche/src/main/resources/cn/bc/business/workflow/jiaoche/ExitOperationCars.form
@@ -1,5 +1,5 @@
 <div title='交车确认流程' data-type='form' class="bc-page"
-	data-js='${contextPath}/bc-business-workflow/jiaoche/CheckExitOperationCarsProcess.js,js:identity,${contextPath}/bc-business/bs.js'
+	data-js='bc-business-workflow/jiaoche/CheckExitOperationCarsProcess.js,js:identity,bc-business/bs.js'
 	data-initMethod='bs.CheckExitOperationCarsProcessForm.init'
 	data-option="{'minWidth':300
 	,'minHeight':300
